tests/NormalTests/paczka1/fuzzy1/11655307.err
Error in line 7: o7LSgmb S122 3,8
Error in line 21: S802 S802 83,2
Error in line 15: ocgKXqdhh S92 44,0
